# meowify

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
crates/soundcloud-cli/: Cargo.toml
crates/soundcloud-cli/src/: main.rs
crates/soundcloud-core/: Cargo.toml
crates/soundcloud-core/src/: api.rs  auth.rs  config.rs  db.rs  lib.rs
crates/soundcloud-gtk/: Cargo.toml
crates/soundcloud-gtk/src/: main.rs  mpris.rs
crates/soundcloud-party/: Cargo.toml
crates/soundcloud-party/src/: discovery.rs  lib.rs  model.rs  protocol.rs  rbac.rs  room.rs
crates/soundcloud-playback/: Cargo.toml
crates/soundcloud-playback/src/: gst.rs  lib.rs
crates/soundcloud-tui/: Cargo.toml
crates/soundcloud-tui/src/: main.rs
docs/: api-notes.md  research.md  room-protocol.md
