[package]
name = "soundcloud-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
soundcloud-core = { path = "../soundcloud-core" }
soundcloud-party = { path = "../soundcloud-party" }
tracing.workspace = true
