[package]
name = "meowify-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
adw.workspace = true
gtk.workspace = true
meowify-core = { path = "../soundcloud-core" }
meowify-party = { path = "../soundcloud-party" }
tracing.workspace = true
