[package]
name = "meowify-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
adw.workspace = true
gtk.workspace = true
meowify-core = { path = "../soundcloud-core" }
meowify-party = { path = "../soundcloud-party" }
meowify-playback = { path = "../soundcloud-playback" }
mpris-server.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
tracing.workspace = true
