[package]
name = "meowify-playback"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
meowify-core = { path = "../soundcloud-core" }
thiserror.workspace = true
gstreamer = { workspace = true, features = ["v1_24"] }
gstreamer-player = { workspace = true, features = ["v1_24"] }
glib = { version = "0.22", features = ["v2_80"] }

[dev-dependencies]
tokio.workspace = true
