[package]
name = "soundcloud-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
soundcloud-core = { path = "../soundcloud-core" }
soundcloud-party = { path = "../soundcloud-party" }
