[package]
name = "meowify-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
meowify-core = { path = "../soundcloud-core" }
meowify-party = { path = "../soundcloud-party" }
meowify-playback = { path = "../soundcloud-playback" }
